@@ -36,6 +36,7 @@ import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodType;
 import java.util.concurrent.TimeUnit;
@@ -64,7 +65,9 @@ public class LinkUpcall extends CLayouts {
 
     @Benchmark
     public MemorySegment link_blank() {
-        return LINKER.upcallStub(BLANK, BLANK_DESC, SegmentScope.auto());
+        try (Arena arena = Arena.openConfined()) {
+            return LINKER.upcallStub(BLANK, BLANK_DESC, arena.scope());
+        }
     }
 
     static void blank() {}
